# multitenant-ai-media-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assets/: architecture.json
src/aiplatform/: __init__.py  config.py  main.py
src/aiplatform/api/: deps.py
src/aiplatform/api/routers/: generation.py  health.py  jobs.py  wallet.py
src/aiplatform/core/: errors.py  security.py  tenancy.py
src/aiplatform/domain/: entitlements.py  models.py
src/aiplatform/engines/: base.py  lyrics.py  music.py  registry.py  video.py  voice.py
src/aiplatform/infra/: db.py  redis_client.py  runpod_client.py  supabase_client.py
src/aiplatform/providers/: amphion.py  audiocraft.py  base.py  comfyui.py  openvoice.py  registry.py  runpod_adapter.py  rvc.py
src/aiplatform/repositories/: base.py
src/aiplatform/services/: credits.py  entitlements.py  gateway.py
src/aiplatform/workers/: celery_app.py  tasks.py
tests/: test_credits.py  test_entitlements.py  test_provider_registry.py
